WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250277
Potential Crash or Debug Assertion Fix - AudioNodeOutput::enable() and AudioNodeOutput::disable() should not be reentered
https://bugs.webkit.org/show_bug.cgi?id=250277
Summary
Potential Crash or Debug Assertion Fix - AudioNodeOutput::enable() and AudioN...
Ahmad Saleem
Reported
2023-01-07 10:13:53 PST
Hi Team, It is potential fix and it might be that WebKit is not impact but just wanted to raise for input. Blink Commit -
https://chromium.googlesource.com/chromium/blink/+/5aab12eeaa90cb1b79610a2e267cbde4c09b8d9b
WebKit Source -
https://searchfox.org/wubkat/source/Source/WebCore/Modules/webaudio/AudioNodeOutput.cpp#227
It does not have any test case to reproduce this issue but it seems to be potential fix, I just wanted to raise and get input. More Stable WebKit - who wouldn't like it. Thanks!
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-01-14 10:14:14 PST
<
rdar://problem/104262252
>
EWS
Comment 2
2023-01-14 11:20:26 PST
Committed
258919@main
(80a6a175ed70): <
https://commits.webkit.org/258919@main
> Reviewed commits have been landed. Closing PR #8585 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug