Cherry-pick 258919@main (80a6a175ed70). https://bugs.webkit.org/show_bug.cgi?id=250277

Potential Crash or Debug Assertion Fix - AudioNodeOutput::enable() and AudioNodeOutput::disable() should not be reentered
    https://bugs.webkit.org/show_bug.cgi?id=250277

    Reviewed by Eric Carlson.

    Merge - https://src.chromium.org/viewvc/blink?revision=181693&view=revision

    This patch is to fix potential debug assertion fix where AudioNodeOutput::disable() can be reentered
    and in order to avoid re-entry, this patch moves m_isEnabled place. Similar is done for
    AudioNodeOutput::enable() to avoid re-entry.

    * Source/WebCore/Modules/webaudio/AudioNodeOutput.cpp:
    (AudioNodeOutput::disable): move m_isEnabled above 'for' loop
    (AudioNodeOutput::enable): Ditto

    Canonical link: https://commits.webkit.org/258919@main